istio-in-action/ch9/allow-unauthenticated-view-default-ns.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "webapp-allow-unauthenticated-view-default-ns"
  namespace: istioinaction
spec:
  selector:
    matchLabels:
      app: webapp
  rules: # no from = allow from unauthenticated workloads
    - to:
      - operation:
          methods: ["GET"]
  action: ALLOW
